@@ -1,6 +1,6 @@
 pushpc
 
-; Enable/disable life loss on death depending on the table.
+; Enable/disable life loss on death depending on the setting and table.
 org $00D0D8
     jml lose_lives
     nop
@@ -8,6 +8,7 @@ org $00D0D8
 pullpc
 
 lose_lives:
+if not(!infinite_lives)
     ; Decrement lives if applicable, and go to Game Over if they're over.
     jsr shared_get_bitwise_mask
     and.l tables_lose_lives,x : beq .normal
@@ -16,4 +17,5 @@ lose_lives:
 .game_over:
     jml $00D0DD|!bank
 .normal:
+endif
     jml $00D0E6|!bank
